<resources>
    <string name="app_name">CarMarket</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title">title</string>
    <string name="subinfo">subInfo</string>
    <string name="category">Category</string>
    <string name="km">Km</string>
    <string name="price">Price</string>
    <string name="usd">USD</string>
    <string name="add_new">Add new</string>
    <string name="photo">Photo</string>
    <string name="brand">Brand</string>
    <string name="information">Information</string>
    <string name="save">Save</string>
    <string name="distance">Distance</string>
    <string name="warning">Please fill all required fields</string>
    <string name="sorting">Sorting</string>
    <string name="sort">Sort</string>
</resources>