<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.60">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/brand_edit"
                    style="@style/BaseEditText"
                    android:maxLength="25"
                    android:hint="@string/brand"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/info_edit"
                    style="@style/BaseEditText"
                    android:maxLength="25"
                    android:hint="@string/information"
                    android:inputType="text" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/category_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_image_icon"
                    android:layout_marginStart="@dimen/base_space_3x"
                    android:layout_marginEnd="@dimen/base_space_3x"
                    app:layout_constraintBottom_toTopOf="@+id/km_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/info_edit" />

                <EditText
                    android:id="@+id/km_edit"
                    style="@style/BaseEditText"
                    android:hint="@string/distance"
                    android:inputType="number"
                    android:maxLength="9" />

                <EditText
                    android:id="@+id/price_edit"
                    style="@style/BaseEditText"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:maxLength="9" />

                <Button
                    android:id="@+id/btn_save"
                    style="@style/fpaButton"
                    android:layout_marginTop="@dimen/overview_list_item_type_nr_text_width"
                    android:layout_marginBottom="@dimen/summary_margit_top"
                    android:text="@string/save" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>


